--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -8,8 +8,18 @@
       <p>
         Welcome to Dodge College of film and Media arts, a state-of-the-art facility open to you 24/7, acomplished faculty with a combined filmography of more than 300 feature films, a hands-on learning environment, international travel oportunities, one-of-a-kind internships, a solid alumni network and synergy across all programs.
       </p>
-      <nav>
-        <a href="#" class="theme-primary-bg">Programs and Majors</a>
+
+      <nav class="program-select">
+        <select onchange="location.href=this.options[this.selectedIndex].value">
+          <option value="#">Programs and Majors</option>
+          <option value="http://jameskerr.info">Film Production</option>
+          <option value="https://github.com">Editing</option>
+          <option value="http://jameskerr.info">Screenwriting</option>
+          <option value="http://jameskerr.info">Publications & Broadcasting</option>
+        </select>
+      </nav>
+
+      <nav class="calls-to-action">
         <a href="#" class="theme-primary-bg">Visit Dodge</a>
         <a href="#" class="theme-primary-bg">Admission Information</a>
       </nav>
