updated from CTA 3 Column -> Call To Action 3 Up

--- a/app/views/widgets/single_column/_call_to_action_3_up.html
+++ b/app/views/widgets/single_column/_call_to_action_3_up.html
@@ -1,4 +1,4 @@
-<div class="cta-3-column-widget">
+<div class="call-to-action-3-up-widget">
 	<div class= "outer-container">
 		<div class="column">
 			<div class= "image-wrap">
