Updated colors for themes

--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -243,9 +243,8 @@
 }
 
 @mixin theme-color-classes($primary, $secondary) {
-	.theme-primary-bg { background-color: $primary; }
-	.theme-secondary-bg { background-color: $secondary; }
-	// Identify more items like this to create for themeing the templates.
-	// .theme-content {}
-	// .theme-button {}
+	.theme-bg-color       { background-color: $primary; }
+	.theme-bg-color-alpha { background-color: rgba(red($primary), green($primary), blue($primary), 0.95); }
+	.theme-border-color   { border-color: $primary; }
+	.theme-button { @include button($primary); }
 }
