--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -76,8 +76,8 @@ $crean-secondary: #125e5a;
 $dance-primary: #007165;
 $dance-secondary: #005249;
 
-$dodge-primary: #1f1f1f;
-$dodge-secondary: #000;
+$dodge-primary: #000000;
+$dodge-secondary: #1f1f1f;
 $dodge-tertiary: #42413d;
 
 $music-primary: #793141;
