--- a/app/views/widgets/single_column/_call_to_action_3_up.html
+++ b/app/views/widgets/single_column/_call_to_action_3_up.html
@@ -33,7 +33,7 @@
 				<p class="text-content">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit.
 				</p>
-				<a class= "more-link">See More Information</a>
+				<a class="more-link theme-button">See More Information</a>
 			</div>
 		</div>
 	</div>
