--- a/app/views/widgets/single_column/_chapman_events_feed.html
+++ b/app/views/widgets/single_column/_chapman_events_feed.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="actions">
-      <a href="https://events.chapman.edu" class="events-feed-url">Dodge Events Calendar</a>
+      <a href="https://events.chapman.edu" class="events-feed-url theme-button">Dodge Events Calendar</a>
     </div>
   </div>
 </div>
