--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -10,7 +10,7 @@
       </p>
 
       <nav class="program-select">
-        <select onchange="location.href=this.options[this.selectedIndex].value">
+        <select onchange="location.href=this.options[this.selectedIndex].value" class="theme-border-color">
           <option value="#">Programs and Majors</option>
           <option value="http://jameskerr.info">Film Production</option>
           <option value="https://github.com">Editing</option>
@@ -20,12 +20,12 @@
       </nav>
 
       <nav class="calls-to-action">
-        <a href="#" class="theme-primary-bg">Visit Dodge</a>
-        <a href="#" class="theme-primary-bg">Admission Information</a>
+        <a href="#" class="theme-bg-color">Visit Dodge</a>
+        <a href="#" class="theme-bg-color">Admission Information</a>
       </nav>
     </section>
 
-    <article>
+    <article class="theme-bg-color-alpha">
       <img src="http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg">
       <div class="content">
         <span>Beyond Dodge</span>
