Namespace the themes

--- a/app/assets/stylesheets/base/defaults.scss
+++ b/app/assets/stylesheets/base/defaults.scss
@@ -1,4 +1,7 @@
-@include theme-color-classes($red, $red);
+#theme {
+  @include theme-color-classes($red, $red);
+}
+
 
 * {
   word-wrap: break-word;
