--- a/app/views/widgets/single_column/_call_to_action_block.html
+++ b/app/views/widgets/single_column/_call_to_action_block.html
@@ -1,4 +1,4 @@
-<div class="cta-block-widget">
+<div class="call-to-action-block-widget">
     <div class="outer-container">
         <a href="#" class="box box__text-light" style="background-image: url(https://www.colourbox.com/preview/3280081-blurry-pattern-of-colorful-decoration-stars.jpg)">
             <div class="content-container">
