--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -10,6 +10,7 @@
       </p>
 
       <nav class="program-select">
+        <span class="select-arrow theme-border-color"></span>
         <select onchange="location.href=this.options[this.selectedIndex].value" class="theme-border-color">
           <option value="#">Programs and Majors</option>
           <option value="http://jameskerr.info">Film Production</option>
