spacing and font weight changes to a-z anchors and labels
heavier anchor links, more space surrounding letter headers, less space
between anchor links

--- a/app/assets/stylesheets/widgets/primary_column/anchor-links.scss
+++ b/app/assets/stylesheets/widgets/primary_column/anchor-links.scss
@@ -10,12 +10,15 @@
 		padding:0 10px 0 10px;
 		text-decoration:underline;
 		border-left:1px solid black;
+		border-bottom: none;
+		font-weight:600;
 	}
 	
 	.anchorLinks>a:first-child{
-		padding:0 10px 0 0;
+		padding:0 8px 0 0;
 		text-decoration:underline;
 		border-left:none;
+		border-bottom: none;
 	}
 	
 	.letterBlock {
@@ -43,6 +46,6 @@
 	.letter, .letter:hover, .letter:focus, .letter:visited{
 		color:Black !important;   
 		text-decoration:none;
-		margin:0 0 5px 0;
+		margin: 20px 0 5px 0;
 		display:block;
 	}
