Separated javascript and classes from tabs and newsEventsg

--- a/app/views/widgets/primary_content/_tabs_1.html
+++ b/app/views/widgets/primary_content/_tabs_1.html
@@ -1,11 +1,11 @@
 <div class="tabs-widget">
-    <ul class="newsEventsNav">
+    <ul class="tabs-nav">
         <li class="active">Executive Committee</li>
         <li>Chapman Chats - Students</li>
         <li>Chapman Chats - Alumni</li>
         <li>Summer Bash</li>
     </ul>
-    <ul class="newsEventsContent editableContent clearfix">
+    <ul class="tabs-content editableContent clearfix">
         <li class="active"><img align="left" alt="Headshot of Ryan Hougardy" height="150" src="http://dev-www.chapman.edu/alumni-AFTER-MIGRATION/_files/edited-for-web/ryan-hougardy-bio.jpg" width="130">
             <p><strong>Ryan Hougardy</strong>
                 <br> B.S. business administration ’09 (MBA ’12)
