--- a/app/assets/stylesheets/widgets/primary_column/tabs.scss
+++ b/app/assets/stylesheets/widgets/primary_column/tabs.scss
@@ -7,3 +7,66 @@
 .tabs-widget {
   padding: $primary-column-widget-spacing 0;
 }
+
+// The navigation container
+.tabs-nav {
+  display: block;
+  z-index: 100;
+  position: relative;
+  display: block;
+  height: auto;
+  clear: both;
+  @include bp(l) {
+    padding: 0 0 10px 0;
+  }
+}
+
+// The clickable tabs
+.tabs-nav  li {
+  // When small, make the tabs collapse.
+  background-color: #e3e2de;
+  font-size: 1.1em;
+  padding: 0 17px 0 17px;
+  line-height: 35px;
+  height: 35px;
+  cursor: pointer;
+  bottom: -1px; // Cover up the border of the primary content
+  position: relative;
+  border-top: 2px solid transparent;  // Keep text in same spot as active element
+  list-style-type: none;
+  margin: 0;
+
+  // When big screen, make the tabs look like tabs
+  @include bp(l) {
+    margin: 0 2px 0 0;
+    float: left;
+    transition: padding 200ms;
+  }
+
+  &:hover {
+    background-color: #e0e0dd;
+    color: $link-color;
+  }
+  &.active { // The selected tab
+    background-color: $tab-content-bg-color;
+    font-weight: 800;
+    color: $primary-color;
+    border-top: 2px solid $primary-color;
+    border-right: 1px solid $tab-content-border-color;
+    border-left: 1px solid $tab-content-border-color;
+    border-bottom: 1px solid $tab-content-bg-color;
+    @include bp(l) { padding: 0 40px 0 40px; }
+  }
+}
+
+.tabs-content {
+  background-color: $tab-content-bg-color;
+  border: 1px solid $tab-content-border-color;
+  position: relative;
+  color: $text-color;
+  clear: both;
+  padding: 20px;
+  div { margin: 0; }
+  > li { display: none; }
+  > li.active { display: block;}
+}
