--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -98,8 +98,9 @@
 
   // The featured article
   article {
+    // A hack to make this default background black, but then the colors for the rest of the schools.
+    #theme &.theme-bg-color-alpha { background-color: rgba(0,0,0,0.95); }
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
-    background-color: rgba(0,0,0,0.95);
     color: white;
 
     @include media($medium-screen) {
