Direct decendent selector needed

--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -6,7 +6,7 @@
   masthead: masthead/boxes_1
 
   primary_content:
-    - primary_content/regions_1
+    - primary_content/tabs_1
 
   left_column:
     - left_column/callout_2
