--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -10,13 +10,19 @@
       </p>
 
       <nav class="program-select">
+        <input type="hidden" value="#"/>
+        <input type="hidden" value="http://jameskerr.info"/>
+        <input type="hidden" value="https://github.com"/>
+        <input type="hidden" value="http://jameskerr.info"/>
+        <input type="hidden" value="http://jameskerr.info"/>
+        
         <span class="select-arrow theme-border-color"></span>
-        <select onchange="location.href=this.options[this.selectedIndex].value" class="theme-border-color">
-          <option value="#">Programs and Majors</option>
-          <option value="http://jameskerr.info">Film Production</option>
-          <option value="https://github.com">Editing</option>
-          <option value="http://jameskerr.info">Screenwriting</option>
-          <option value="http://jameskerr.info">Publications & Broadcasting</option>
+        <select class="theme-border-color">
+          <option>Programs and Majors</option>
+          <option>Film Production</option>
+          <option>Editing</option>
+          <option>Screenwriting</option>
+          <option>Publications & Broadcasting</option>
         </select>
       </nav>
 
