added id to program select

--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -15,9 +15,9 @@
         <input type="hidden" value="https://github.com"/>
         <input type="hidden" value="http://jameskerr.info"/>
         <input type="hidden" value="http://jameskerr.info"/>
-        
+
         <span class="select-arrow theme-border-color"></span>
-        <select class="theme-border-color">
+        <select id="program-select-links" class="theme-border-color">
           <option>Programs and Majors</option>
           <option>Film Production</option>
           <option>Editing</option>
