added id to correct program select

--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -9,7 +9,7 @@
         Welcome to Dodge College of film and Media arts, a state-of-the-art facility open to you 24/7, acomplished faculty with a combined filmography of more than 300 feature films, a hands-on learning environment, international travel oportunities, one-of-a-kind internships, a solid alumni network and synergy across all programs.
       </p>
 
-      <nav class="program-select">
+      <nav id="program-select-links" class="program-select">
         <input type="hidden" value="#"/>
         <input type="hidden" value="http://jameskerr.info"/>
         <input type="hidden" value="https://github.com"/>
@@ -17,7 +17,7 @@
         <input type="hidden" value="http://jameskerr.info"/>
 
         <span class="select-arrow theme-border-color"></span>
-        <select id="program-select-links" class="theme-border-color">
+        <select class="theme-border-color">
           <option>Programs and Majors</option>
           <option>Film Production</option>
           <option>Editing</option>
