Change value to be href

--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -10,11 +10,11 @@
       </p>
 
       <nav id="program-select-links" class="program-select">
-        <input type="hidden" value="#"/>
-        <input type="hidden" value="http://jameskerr.info"/>
-        <input type="hidden" value="https://github.com"/>
-        <input type="hidden" value="http://jameskerr.info"/>
-        <input type="hidden" value="http://jameskerr.info"/>
+        <input type="hidden" href="#"/>
+        <input type="hidden" href="http://jameskerr.info"/>
+        <input type="hidden" href="https://github.com"/>
+        <input type="hidden" href="http://jameskerr.info"/>
+        <input type="hidden" href="http://jameskerr.info"/>
 
         <span class="select-arrow theme-border-color"></span>
         <select class="theme-border-color">
