Added a dark background to call to action block widgets when their text is light

--- a/app/views/widgets/single_column/_call_to_action_block.html
+++ b/app/views/widgets/single_column/_call_to_action_block.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
         </a>
-        <a href="#" class="box box__text-light" style="background-image: url('http://1.bp.blogspot.com/-WhxajkG8yxQ/Ui5W1owVdxI/AAAAAAAAAsQ/JMMm9rGL93Y/s1600/1150196_10151860751099459_653835867_n.jpg')">
+        <a href="#" class="box box__text-light">
             <div class="content-container">
                 <div class="content">
                     <h3 class="title">Play</h3>
