--- a/app/assets/stylesheets/widgets/single_column/call_to_action_block.scss
+++ b/app/assets/stylesheets/widgets/single_column/call_to_action_block.scss
@@ -77,5 +77,7 @@ $call-to-action-block-screen-height: 150px;
 
   .box__text-light {
     color: white;
+    background-color: $black;
+    &:hover { background-color: black; }
   }
 }
