--- a/app/views/1_column/hero_side_panel.html.erb
+++ b/app/views/1_column/hero_side_panel.html.erb
@@ -4,6 +4,7 @@
 <%= widgets <<-YAML
     primary_content:
       - hero/side_panel
+      - single_column/call_to_action_block
       - single_column/messaging_2_column_text_left
       - single_column/chapman_events_feed
       - single_column/messaging_1_column_facts
