Media all to include print styles

--- a/app/views/widgets/shared/_head.html
+++ b/app/views/widgets/shared/_head.html
@@ -25,7 +25,7 @@
     <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
     <![endif]-->
 
-    <%= stylesheet_link_tag 'master' %>
+    <%= stylesheet_link_tag 'master', media: 'all' %>
 
     <script>
     window.fbAsyncInit = function() {
