--- a/app/views/1_column/hero_side_panel.html.erb
+++ b/app/views/1_column/hero_side_panel.html.erb
@@ -1,8 +1,9 @@
 <%= title "Sample landing page" %>
-<%= theme "nil" %>
+<%= theme "law" %>
 
 <%= widgets <<-YAML
     primary_content:
+      - hero/business_hero
       - single_column/messaging_1_column_facts
   YAML
 %>
