--- a/app/assets/stylesheets/themes/business.scss
+++ b/app/assets/stylesheets/themes/business.scss
@@ -1,6 +1,6 @@
 
 #theme.business {
-  @include theme-color-classes($asbe-primary, $asbe-secondary);
+  @include theme-color-classes($asbe-primary);
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
     background: $asbe-primary; /* Old browsers */
