--- a/app/assets/stylesheets/themes/copa__music.scss
+++ b/app/assets/stylesheets/themes/copa__music.scss
@@ -1,6 +1,7 @@
 
 #theme.copa__music {
-
+  @include theme-color-classes($music-primary);
+  
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $music-primary; /* Old browsers */
   	background: -moz-radial-gradient(center, ellipse cover,  $music-primary 0%, $music-secondary 100%); /* FF3.6+ */
