--- a/app/assets/stylesheets/themes/law.scss
+++ b/app/assets/stylesheets/themes/law.scss
@@ -1,4 +1,6 @@
 #theme.law {
+    @include theme-color-classes(#002f7c);
+    
     .bigMasthead header {
         @include media(1024px) { margin: 0; }
         @include media(1120px) { margin: 30px 0; }
