--- a/app/assets/stylesheets/themes/pharmacy.scss
+++ b/app/assets/stylesheets/themes/pharmacy.scss
@@ -1,6 +1,7 @@
 
 #theme.pharmacy {
-  @include theme-color-classes($pharmacy-primary, $pharmacy-secondary);
+  @include theme-color-classes($pharmacy-primary);
+  
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $pharmacy-primary; /* Old browsers */
   	background: -moz-radial-gradient(center, ellipse cover, $pharmacy-primary 1%, $pharmacy-secondary 93%); /* FF3.6+ */
