--- a/app/assets/stylesheets/themes/wilkinson.scss
+++ b/app/assets/stylesheets/themes/wilkinson.scss
@@ -1,6 +1,6 @@
 
 #theme.wilkinson {
-  @include theme-color-classes($wilkinson-primary, $wilkinson-secondary);
+  @include theme-color-classes($wilkinson-primary);
   
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $wilkinson-primary; /* Old browsers */
