--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -98,8 +98,6 @@
 
   // The featured article
   article {
-    // A hack to make this default background black, but then the colors for the rest of the schools.
-    #theme &.theme-bg-color-alpha { background-color: rgba(0,0,0,0.95); }
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
     color: white;
 
@@ -124,17 +122,30 @@
       padding: $base-spacing*2 $base-spacing*3;
     }
 
-    span { // Category
-      @include content_label(); 
+    .category {
+      @include content_label();
+      color: white; 
     }
     
-    h2 { // Main title
+    .title {
       margin: 0;
     }
     
-    h3 { // Subtitle
+    .subtitle { 
       margin-top: 0;
       font-weight: 200;
     }
+
+    a {
+      color: white;
+      text-decoration: underline;
+      font-weight: bold;
+    }
   } 
+}
+
+
+// Override the default background color when no theme is applied
+#theme .side-panel-hero .theme-bg-color-alpha { 
+  background-color: rgba(0,0,0,0.95); 
 }
