--- a/app/views/1_column/landing_page.html.erb
+++ b/app/views/1_column/landing_page.html.erb
@@ -5,7 +5,7 @@
     primary_content:
       - single_column/messaging_1_column_image
       - single_column/messaging_1_column_facts
-      - single_column/cta_block
+      - single_column/call_to_action_block
       - single_column/chapman_events_feed
       - single_column/chapman_social_feed
       - single_column/messaging_2_column_facts
