Changed the way we position the large videos.  Removed library.  Added my own 26 lines of code.

--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -5,9 +5,14 @@
     padding-top: $one-column-widget-spacing*2;
   }
 
+  video {
+    width: 100%;
+  }
+
   .background-image, .background-video-wrapper {
     display: none;
     @include media($large-screen) {
+      overflow: hidden;
       display: block;
       position: absolute;
       top: 0; right: 0; left: 0; bottom: 0;
