--- a/app/views/1_column/hero_side_panel.html.erb
+++ b/app/views/1_column/hero_side_panel.html.erb
@@ -1,9 +1,9 @@
 <%= title "Sample landing page" %>
-<%= theme "law" %>
+<%= theme "business" %>
 
 <%= widgets <<-YAML
     primary_content:
-      - hero/business_hero
+      - hero/side_panel_video
       - single_column/messaging_1_column_facts
   YAML
 %>
