--- a/app/views/widgets/single_column/_messaging_1_column_facts.html
+++ b/app/views/widgets/single_column/_messaging_1_column_facts.html
@@ -20,8 +20,8 @@
               <div class="fact-image mortarboard"></div>
               <div class="fact-content">
                 <span class="fact-stat-nums">3.67</span>
-                <span class="fact-title-1">CHAPMAN'S</span>
-                <span class="fact-title-2">AVERAGE GPA</span>
+                <span class="fact-title-1">CHAPMAN'S crazy stuff like this</span>
+                <span class="fact-title-2">AVERAGE GPA Is lots of stuff</span>
               </div>
             </div>
             <div class="fact-back fact-content">
