Changed html to match what is in cascade

--- a/app/views/widgets/single_column/_messaging_1_column_facts.html
+++ b/app/views/widgets/single_column/_messaging_1_column_facts.html
@@ -34,8 +34,8 @@
             <div class="fact-front orange">
               <div class="fact-image chair"></div>
               <div class="fact-content">
-                <span class="fact-stat-nums">23<br></span>
-                <span class="fact-title-1">average<br>class size</span>
+                <span class="fact-stat-nums">23</span>
+                <span class="fact-title-1">average class size</span>
               </div>
             </div>
             <div class="fact-back fact-content">
@@ -48,9 +48,8 @@
             <div class="fact-front green">
               <div class="fact-image books"></div>
               <div class="fact-content">
-                <span class="fact-stat-nums">102<br></span>
-                <span class="fact-title-2">AREAS OF STUDY</span>
-                <span class="fact-stat-nums">23</span>
+                <span class="fact-stat-nums">102</span>
+                <span class="fact-title-1">AREAS OF STUDY</span>
                 <span class="fact-title-2">MINORS</span>
               </div>
             </div>
@@ -65,7 +64,7 @@
               <div class="fact-image people"></div>
               <div class="fact-content">
                 <span class="fact-stat-nums">14:1</span>
-                <span class="fact-title-1">RATIO<br></span>
+                <span class="fact-title-1">RATIO</span>
                 <span class="fact-title-2">STUDENT TO FACULTY</span>
               </div>
             </div>
