--- a/app/assets/stylesheets/widgets/single_column/call_to_action_block.scss
+++ b/app/assets/stylesheets/widgets/single_column/call_to_action_block.scss
@@ -27,11 +27,18 @@ $call-to-action-block-screen-height: 150px;
     background-color: darken(white, 2%);
     transition: transform 100ms;
 
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; bottom: 0; right: 0;
+      background-color: rgba(255,255,255,0.3);
+    }
+
     &:hover {
       background-color: white;
       transform: scale(1.02);
       z-index: 2;
-      box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.3);
+      box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.25);
     }
 
     @include media($medium-screen) {
@@ -46,6 +53,8 @@ $call-to-action-block-screen-height: 150px;
     display: table;
     height: 100%;
     width: 100%;
+    position: relative;
+    z-index: 1;
   }
 
   .content {
@@ -79,5 +88,12 @@ $call-to-action-block-screen-height: 150px;
     color: white;
     background-color: $black;
     &:hover { background-color: black; }
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; bottom: 0; right: 0;
+      background-color: rgba(0,0,0,0.3);
+    }
   }
 }
