changed dark theme background from black to dark gray. fixes #29

--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -141,7 +141,7 @@
 
 /* Light Text Variation */
 .messaging-widget__text-light {
-	background-color: black;
+	background-color: #353430;
 	.title, .category, .body { color: white; }
 }
 
