--- a/app/views/widgets/single_column/_messaging_2_column_facts.html
+++ b/app/views/widgets/single_column/_messaging_2_column_facts.html
@@ -1,4 +1,4 @@
-<div class="messaging-widget messaging-widget__2-column messaging-widget__text-right messaging-widget__text-dark has-fact-cards">
+<div class="messaging-widget messaging-widget__2-column messaging-widget__text-right messaging-widget__text-dark messaging-widget__has-fact-cards">
   <div class="outer-container">
     <div class="text-column">
       <div class="section-message">
