fixed styles for fact cards

--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -83,12 +83,13 @@
 	&.messaging-widget__text-right {
 		/* Medium Screen */
 		@include media($medium-screen) {
+
 			.media-column {
 				@include span-columns(8);
 			}
 			.text-column {
-				@include span-columns(9);
 				@include shift(1);
+				@include span-columns(9);
 			}
 			.actions {
 				text-align: left;
@@ -108,8 +109,7 @@
 
 
 	/* Text Left Variation */
-	&.messaging-widget__text-left,
-	&.messaging-widget__text-right.messaging-widget__has-fact-cards {
+	&.messaging-widget__text-left {
 		@include direction-context(right-to-left) {
 			/* Medium Screen */
 			@include media($medium-screen) {
@@ -136,14 +136,29 @@
 			}
 		}
 	}
+
+	&.messaging-widget__text-right.messaging-widget__has-fact-cards {
+		@include media($medium-screen) {
+			.text-column {
+				float: right;
+			}
+		}
+	}
+
+	&.messaging-widget__text-left.messaging-widget__has-fact-cards {
+		@include media($medium-screen) {
+			.text-column {
+				float: left;
+			}
+		}
+	}
 }
 
-.messaging-widget__text-right.messaging-widget__has-fact-cards .media-column {
+.messaging-widget__has-fact-cards .media-column {
 	padding-top: $base-spacing * 4;
 
 	@include media($medium-screen) {
 		padding-top: 0;
-		text-align: left;
 	}
 }
 
