added class for white background option

--- a/app/assets/stylesheets/widgets/single_column/call_to_action_3_up.scss
+++ b/app/assets/stylesheets/widgets/single_column/call_to_action_3_up.scss
@@ -1,6 +1,10 @@
 .call-to-action-3-up-widget {
 	padding: $one-column-widget-spacing 0;
 
+	&.call-to-action-3-up-widget__white-container {
+		background-color: #ffffff;
+	}
+
 	.outer-container {
 		@include outer-container();
 	}
