created cta footer widget. fixes #33

--- a/app/views/1_column/landing_page.html.erb
+++ b/app/views/1_column/landing_page.html.erb
@@ -16,5 +16,6 @@
       - single_column/messaging_2_column_text_left  
       - single_column/messaging_1_column
       - single_column/call_to_action_3_up
+      - single_column/cta_footer
   YAML
 %>
