changed background color of one column from light gray to silver gray

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -76,6 +76,7 @@ $color-row-border:   #CCCCCC;
 
 // Background colors
 $bg-light-gray:      #ecebe5;
+$bg-silver-gray:     #e5e5e5;
 $bg-off-white:       #f2f2f0;
 $bg-red:             #a82439;
 
