--- a/app/assets/stylesheets/widgets/primary_column/personnel_region.scss
+++ b/app/assets/stylesheets/widgets/primary_column/personnel_region.scss
@@ -1,14 +1,19 @@
 .personnel-listing-widget {
   padding: $primary-column-widget-spacing 0;
-
+	
+  .sectionHeader {
+    margin-top: 0;
+	padding-top: 0;
+	}
+		
   .person {
     &:first-child {
       border-top: none;
     }
 
     position: relative;
-    border-top: 1px solid $cu-border;
-    padding: $base-spacing*2 0;
+    border-bottom: 1px solid $cu-border;
+    padding: $base-spacing*1 0;
     padding-left: 145px;
     height: auto;
     min-height: 200px;
@@ -21,7 +26,7 @@
 
   .image {
     position: absolute;
-    top: $base-spacing*2;
+    top: $base-spacing*1;
     left: 0;
     border-radius: 3px;
   }
